# vscode-cmd-truncated

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
quefacemos/: CMakeLists.txt
quefacemos/Include/: quefacemos.h
quefacemos/Source/: quefacemos.cpp
quefacemos10/: CMakeLists.txt
quefacemos10/Include/: quefacemos10.h
quefacemos10/Source/: quefacemos10.cpp
quefacemos11/: CMakeLists.txt
quefacemos11/Include/: quefacemos11.h
quefacemos11/Source/: quefacemos11.cpp
quefacemos12/: CMakeLists.txt
quefacemos12/Include/: quefacemos12.h
quefacemos12/Source/: quefacemos12.cpp
quefacemos13/: CMakeLists.txt
quefacemos13/Include/: quefacemos13.h
quefacemos13/Source/: quefacemos13.cpp
quefacemos14/: CMakeLists.txt
quefacemos14/Include/: quefacemos14.h
quefacemos14/Source/: quefacemos14.cpp
quefacemos15/: CMakeLists.txt
quefacemos15/Include/: quefacemos15.h
quefacemos15/Source/: quefacemos15.cpp
quefacemos16/: CMakeLists.txt
quefacemos16/Include/: quefacemos16.h
quefacemos16/Source/: quefacemos16.cpp
quefacemos17/: CMakeLists.txt
quefacemos17/Include/: quefacemos17.h
quefacemos17/Source/: quefacemos17.cpp
quefacemos18/: CMakeLists.txt
quefacemos18/Include/: quefacemos18.h
quefacemos18/Source/: quefacemos18.cpp
quefacemos19/: CMakeLists.txt
quefacemos19/Include/: quefacemos19.h
quefacemos19/Source/: quefacemos19.cpp
quefacemos2/: CMakeLists.txt
quefacemos20/: CMakeLists.txt
quefacemos21/: CMakeLists.txt
quefacemos22/: CMakeLists.txt
quefacemos23/: CMakeLists.txt
quefacemos25/: CMakeLists.txt
quefacemos3/: CMakeLists.txt
quefacemos4/: CMakeLists.txt
quefacemos5/: CMakeLists.txt
quefacemos6/: CMakeLists.txt
quefacemos7/: CMakeLists.txt
quefacemos8/: CMakeLists.txt
quefacemos9/: CMakeLists.txt
(+30 files in other folders)
